kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-nexus
  labels:
    name: devops-nexus
    # TODO: Add security labels for pod-security-admission controls
