kubernetes/traffic-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: devops-nexus-prod
  labels:
    app: traffic-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
    spec:
      containers:
      - name: generator
        image: traffic-generator:latest
        imagePullPolicy: Never
