kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: devops-nexus
  labels:
    app: gateway
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gateway
  type: ClusterIP # TODO: Evaluate LoadBalancer or NodePort requirements for non-ingress setups
