kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-nexus-ingress
  namespace: devops-nexus
  annotations:
    kubernetes.io/ingress.class: nginx
    # TODO: Add cert-manager annotations for SSL certificates auto-provisioning
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: nexus.local # TODO: Map production DNS names
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 8080
  # TODO: Enable tls configurations
  # tls:
  # - hosts:
  #   - nexus.local
  #   secretName: devops-nexus-tls-cert
